# dash-mno-verify

./: .gitignore  CLAUDE.md  EVALUATION.md  README.md  REVIEW_FINDINGS_dash-mno-verify_2026-06-26.md  TODO.md  expected.txt  input.json  keys.manifest.json  package-lock.json  package.json
.github/workflows/: ci.yml  risc0-registration-bench.yml  zkvm-vectors.yml
adapters/: README.md
adapters/discord/: README.md  bot.js  grant_ledger.js
adapters/matrix/: README.md  bot.js  room_privacy.js
adapters/telegram/: README.md  bot.js
adapters/web/: README.md  server.js
circuits/: README.md  lib.circom  merkle.circom  mno_members.circom  mno_membership.circom  mno_registration.circom
circuits/hash160/: hash160.circom
circuits/ripemd160/: ripemd160.circom
common/: dml.js  dml_root.js  dml_sha_root.js  field.js  index.js  oracle_sig.js  prover_instructions.js
contract/: mno-verify.contract.json
core/: config.js  dml_root.js  gateway.js  members_tree.js  platform_store.js  registration_store.js  season.js  stores.js  verifier.js
docs/: DEPLOY.md  DESIGN.md  EXPLAINER.md  HANDOFF.md  PLATFORM.md  PROVING_KEY.md  REDUCING_PROVING_COST.md  RUNBOOK.md  THREAT_MODEL.md  ZKVM_INTEGRATION.md  run_on_your_node.md
oracle/: README.md  oracle.js  snapshot.js
prover/: README.md  prover.js  two_tier.js
research/risc0-registration/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
research/risc0-registration/host/: Cargo.toml
research/risc0-registration/host/src/: main.rs
research/risc0-registration/methods/: Cargo.toml  build.rs
research/risc0-registration/methods/guest/: Cargo.toml
research/risc0-registration/methods/guest/src/: main.rs
research/risc0-registration/methods/src/: lib.rs
research/risc0-registration/scripts/: bench.sh  verify_receipt.mjs
research/risc0-registration/vectors/: Cargo.toml
research/risc0-registration/vectors/src/: lib.rs
scripts/: build_proving_key.sh  check_circuits.sh  fetch_keys.sh  gen_oracle_key.mjs  prove_members.sh  rebuild_proving_keys.sh  register_contract.mjs  setup_circom_ecdsa.sh  sign_oracle_snapshot.mjs  two_tier_demo.mjs
test/: bad_privkey.mjs  discord_grant_ledger.test.js  dml_root.test.js  dml_sha_root.test.js  field.test.js  gateway_http.test.js  hash160.test.js  load_oracle.test.js  matrix_room_privacy.test.js  nullifier_store_contract.test.js  oracle_sig.test.js  oracle_snapshot.test.js  platform_store.test.js  prover_instructions.test.js  registration_engines.test.js  registration_store.test.js  root_windows.test.js  season_rollover.test.js  semaphore.test.js  verifier_idempotent.test.js  zkvm_vectors.test.js
test/hash160/: hash160_test.circom  make_input.mjs
test/members/: make_input.mjs
test/membership/: make_input.mjs
test/registration/: make_input.mjs
test/ripemd160/: make_input.mjs  ripemd160_test.circom
test/vectors/: zkvm_golden.json
