[workspace]
resolver = "2"
members = ["host", "methods"]

# Acceleration for the guest. These forks expose RISC Zero precompiles for the
# secp256k1 curve arithmetic (k256) and SHA-256 (sha2), which are the dominant
# costs in the registration statement. The tags below are PLACEHOLDERS and must
# be set to the tags that match your installed RISC Zero release, per the current
# RISC Zero starter template. If they do not match, the guest still compiles but
# runs the arithmetic unaccelerated, and the measured cost is meaningless.
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[profile.release]
opt-level = 3
lto = "thin"
