[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
# Align the risc0-zkvm version with your installed RISC Zero release (see the top-level README).
risc0-zkvm = { version = "1.2.0" }
k256 = { version = "0.13", features = ["arithmetic"] }
sha2 = "0.10"
ripemd = "0.1"
rand = "0.8"
bincode = "1.3"
