[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
vectors = { path = "../vectors" }
risc0-zkvm = { version = "3.0" }
# Exact pins to match the guest and the workspace acceleration patch.
k256 = { version = "=0.13.3", features = ["arithmetic"] }
sha2 = "=0.10.8"
ripemd = "0.1"
rand = "0.8"
bincode = "1.3"
hex = "0.4"
