[package]
name = "vectors"
version = "0.1.0"
edition = "2021"

# Work-plan step 1 of docs/ZKVM_INTEGRATION.md: prove that a Rust Poseidon implementation
# reproduces circomlibjs bit for bit (the design's hard prerequisite), and pin the SHA-256
# DML tree spec, against golden vectors shared with test/zkvm_vectors.test.js in the main
# repository. Runs as a plain cargo test, no zkVM toolchain needed.
[dependencies]
light-poseidon = "0.4"
ark-bn254 = "0.5"
ark-ff = "0.5"
sha2 = "=0.10.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
